--- a/client/index.html
+++ b/client/index.html
@@ -113,7 +113,20 @@
             <div class="possibilities__main">
                 <div class="possibilities__main__text">
                     <div class="possibilities__main__text_header">
-                        <h3></h3>
+                        <h3>Примущество вр</h3>
+                        <ul>
+                            <li>1. Повышенная эффективность обучения: использование VR позволяет создавать иммерсивные
+                                среды, которые максимально приближены к реальным ситуациям. Это обеспечивает более
+                                глубокое погружение обучающихся и улучшает его способность к запоминанию и пониманию
+                                материала.
+                            </li>
+                            <li>2. Безопасность: VR позволяет тренировать обучающихся в опасных ситуациях, которые могут
+                                быть невозможны или слишком рискованными в реальной жизни. Это особенно актуально для
+                                медицинских и военных тренировок, где студенты могут практиковать процедуры без риска
+                                для жизни.
+                            </li>
+
+                        </ul>
                     </div>
                 </div>
                 <div class="possibilities__main__img">
@@ -135,7 +148,23 @@
                 </div>
 
                 <div class="possibilities__main__text">
-                    text
+                    <ul>
+                        <li> 3. Сокращение затрат: обучение виртуальной реальности может снизить стоимость обучения,
+                            поскольку оно не требует дорогостоящего оборудования, поездок или аренды
+                            специализированных обучающих центров. Это делает его доступным для широкого круга
+                            обучаемых.
+                        </li>
+                        <li>4. Опытное обучение: Использование VR позволяет ученикам погрузиться в интерактивные среды,
+                            в которых они могут получать реальный опыт и практиковаться в различных навыках без риска
+                            для себя или окружающих.
+                        </li>
+                        <li>5. Автентичность: VR создает возможность создания виртуальных симуляций, которые достоверно
+                            воспроизводят реальные сценарии. Это позволяет студентам обучаться в real-time условиях, что
+                            значительно повышает качество обучения и дает им навыки, необходимые для работы в реальном
+                            мире.
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -152,28 +181,49 @@
             <div class="tariff__carts">
                 <div class="tariff__cart">
                     <div class="tariff__cart__header">
-                        1
+                        Базовый тариф <br> "Виртуальный старт"
                     </div>
                     <div class="tariff__text">
-                        2
+                        <ul>
+                            <li>- Доступ к ограниченному количеству VR обучающих программ.</li>
+                            <li>- Ограниченное количество часов использования VR оборудования в месяц.</li>
+                            <li>- Ограниченное количество часов использования VR оборудования в месяц.</li>
+                        </ul>
+                    </div>
+                    <div class="tariff__price">
+                        <p>Бесплатно</p>
                     </div>
                 </div>
 
                 <div class="tariff__cart">
                     <div class="tariff__cart__header">
-                        3
+                        Продвинутый тариф <br> "Иммерсивный опыт"
                     </div>
                     <div class="tariff__text">
-                        4
+                        <ul>
+                            <li>- Неограниченный доступ к большому количеству VR обучающих программ.</li>
+                            <li>- Расширенное время использования VR оборудования в месяц.</li>
+                            <li>- Персональная поддержка и консультации.</li>
+                            <li>- Возможность участия в онлайн мастер-классах и вебинарах.</li>
+                        </ul>
+                    </div>
+                    <div class="tariff__price">
+                        <p>1000р</p>
                     </div>
                 </div>
 
                 <div class="tariff__cart">
                     <div class="tariff__cart__header">
-                        5
+                        Премиум-тариф <br>"VR академия"
                     </div>
                     <div class="tariff__text">
-                        6
+                        <ul>
+                            <li>- Полный и безлимитный доступ ко всем обучающим программам в каталоге VR обучения.</li>
+                            <li>- Неограниченное время использования VR оборудования в месяц.</li>
+                        </ul>
+                    </div>
+                    <div class="tariff__price">
+                        <p>2000р</p>
                     </div>
                 </div>
             </div>
