--- a/client/index.html
+++ b/client/index.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="possibilities__main__img">
-                    <img src="https://telegra.ph/file/a8327ce4a729c0d3e8bf3.jpg" alt="">
+                    <img src="./img/6.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
             <div class="possibilities__main">
 
                 <div class="possibilities__main__img">
-                    <img src="https://telegra.ph/file/a8327ce4a729c0d3e8bf3.jpg" alt="">
+                    <img src="./img/5.jpg" alt="">
                 </div>
 
                 <div class="possibilities__main__text">
