--- a/client/index.html
+++ b/client/index.html
@@ -86,15 +86,29 @@
         <span id="close__modal2" class="close__modal">X</span>
         <div class="form__cart">
             <span>Логин:</span>
-            <input placeholder="Логин..." class="login" type="text">
+            <input placeholder="Логин..." class="login" id="login2" type="text">
         </div>
         <div class="form__cart">
             <span>Email:</span>
-            <input placeholder="Email..." class="email" type="email">
+            <input placeholder="Email..." class="email" id="email2" type="email">
         </div>
         <div class="form__cart">
+            <span>Фамилия:</span>
+            <input placeholder="Фамилия..." class="email" id="last__name" type="email">
+        </div>
+        <div class="form__cart">
+            <span>Имя:</span>
+            <input placeholder="Имя..." class="email" id="ferst__name" type="email">
+        </div>
+        <div class="form__cart">
+            <span>Отчество:</span>
+            <input placeholder="Отчество..." class="email" id="middle__name" type="email">
+        </div>
+
+
+        <div class="form__cart">
             <span>Пароль:</span>
-            <input placeholder="Пароль..." class="password" type="password">
+            <input placeholder="Пароль..." class="password" id="pas2" type="password">
         </div>
         <div class="form__btn">
             <input id="submit1" type="submit" class="btn">
