Надо было кое что доделать)))

--- a/client/pc/index.html
+++ b/client/pc/index.html
@@ -61,15 +61,15 @@
                 <div class="navbar-nav w-100">
                     <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Мой профиль</a>
 
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Мой тесты</a>
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Мои результаты</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Мои обращения</a>
+                    <a href="#" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Мой тесты</a>
+                    <a href="#" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Мои результаты</a>
+                    <a href="#" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Мои обращения</a>
 
-                    <a href="table.html" class="nav-item nav-link" id="applications"><i class="fa fa-table me-2" ></i>Мои заявки</a>
-                    <a href="chart.html" class="nav-item nav-link" id="training__materials__database"><i class="fa fa-chart-bar me-2" ></i>База учебных материалов</a>
-                    <a href="chart.html" class="nav-item nav-link" id="test__database"><i class="fa fa-chart-bar me-2" ></i>База тестов</a>
-                    <a href="chart.html" class="nav-item nav-link" id="employee__base"><i class="fa fa-chart-bar me-2" ></i>База сотрудников</a>
-                    <a href="chart.html" class="nav-item nav-link" id="company__analytics"><i class="fa fa-chart-bar me-2" ></i>Аналитика по компании</a>
+                    <a href="#" class="nav-item nav-link" id="applications"><i class="fa fa-table me-2" ></i>Мои заявки</a>
+                    <a href="#" class="nav-item nav-link" id="training__materials__database"><i class="fa fa-chart-bar me-2" ></i>База учебных материалов</a>
+                    <a href="#" class="nav-item nav-link" id="test__database"><i class="fa fa-chart-bar me-2" ></i>База тестов</a>
+                    <a href="#" class="nav-item nav-link" id="employee__base"><i class="fa fa-chart-bar me-2" ></i>База сотрудников</a>
+                    <a href="#" class="nav-item nav-link" id="company__analytics"><i class="fa fa-chart-bar me-2" ></i>Аналитика по компании</a>
 
                 </div>
             </nav>
